<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_md"
    android:id="@+id/tips"
    android:background="@android:drawable/screen_background_dark_transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/card_rounded"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_x"
        android:paddingLeft="@dimen/padding_m"
        android:paddingRight="@dimen/padding_m"
        android:paddingTop="@dimen/padding_xxxl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/visuel_tips" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips_title"
            android:textAlignment="center"
            style="@style/titleTips"
            android:layout_marginTop="@dimen/padding_sm"
            android:layout_marginBottom="@dimen/padding_x"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/detailText"
            android:text="@string/tips_text"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/tips_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips_btn"
            style="@style/linkRed"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
