<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:id="@+id/mainLayout"
    android:focusableInTouchMode="true"
    tools:context=".ui.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_md"
        android:paddingRight="@dimen/padding_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appname"
            style="@style/titleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_x"
            android:layout_marginTop="@dimen/padding_md"
            android:text="@string/appname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <AutoCompleteTextView
            android:id="@+id/input_search"
            style="@style/autocompleteStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appname" />

        <TextView
            android:id="@+id/textView2"
            style="@style/subtitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cocktail_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:listitem="@layout/cocktail_card_item"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_md"
        android:paddingRight="@dimen/padding_md"
        android:paddingBottom="@dimen/padding_md"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cocktail_list">

        <View
            android:id="@+id/divider"
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/textView3"
            style="@style/CocktailTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_search_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/advanced_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xs"
            android:text="@string/advanced_search" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
