<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:focusable="true"
android:focusableInTouchMode="true"
android:id="@+id/mainLayout"
tools:context=".ui.ResultsActivity">
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_button"
            style="@style/linkLeftBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_act"
            android:padding="@dimen/padding_xs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/show_filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/filtersBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            style="@style/divider"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <include
            layout="@layout/loader"
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/results_text"
            style="@style/subtitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results_text"
            android:paddingHorizontal="@dimen/padding_md"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cocktail_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/cocktail_card_item"
            android:paddingHorizontal="@dimen/padding_sm" />

        <LinearLayout
            android:id="@+id/empty"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:paddingHorizontal="@dimen/padding_md"
            android:paddingVertical="@dimen/padding_md">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/padding_sm"
                style="@style/detailText"
                android:text="@string/no_results_text"
                android:textAlignment="textStart"
                android:paddingLeft="0dp"/>

            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change_serach"
                android:paddingHorizontal="@dimen/padding_md" />

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/filters"
        layout="@layout/filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</android.support.constraint.ConstraintLayout>
